# write-now

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  init.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
docs/: CHANGELOG.md  README.zh-CN.md  ui-spec.md  workflow-overview.zh-CN.md
docs/diagrams/: write-agent-content-workflow.mmd
docs/specs/: development-spec-v1.md  verification-checklist.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: product-runtime.test.ts  wordflow-root.test.ts
scripts/: acceptance_smoke.py  create_db.py  xhs_mcp_ctl.sh
src/write_agent/: __init__.py  main.py
tests/: conftest.py  test_acceptance_api_matrix.py  test_api_regressions.py  test_auth.py  test_chat_runtime_api.py  test_cover_local_storage.py  test_cover_prompt_template.py  test_cover_prompt_timeout.py  test_cover_size_mapping.py  test_cover_style_description.py  test_default_style_seed_service.py  test_documents_api.py  test_github_trends_api.py  test_github_trends_service.py  test_lazy_service.py  test_linuxdo_trends_api.py  test_linuxdo_trends_service.py  test_observability_api.py  test_prompt_snapshot.py  test_review_service.py  test_rewrite_image_placeholders.py  test_schema_bootstrap.py  test_stream_interrupt_consistency.py  test_style_service_helpers.py  test_wordflow_proxy_api.py  test_workflow_service.py  test_xhs_trends_api.py  test_xhs_trends_service.py
tests/snapshots/: rewrite_prompt_base.txt  rewrite_prompt_revision.txt
(+149 files in other folders)
