[project]
name = "write-agent"
version = "0.1.0"
description = "写作智能体 - 基于 LangChain + LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.8",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.34",
    "uvicorn>=0.41.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
